
* 0.6.2 *

* Support an optional environment variable to find FreeTDS. Fixes #128.

* Allow Support for 31+ Character Usernames/Passwords. Fixes #134. Thanks @wbond.

* Stronger Global VM Lock support for nonblocking connections. Fixes #133. Thanks @wbond.

* Timeout fix for working with Azure SQL. Fixes #138.

* Correctly handle requests that return multiple results sets via `.do`, such
  as backups and restores. Fixes #150.


* 0.6.1 *

Use both dbsetversion() vs. dbsetlversion. Partially reverts #62.


* 0.6.0 *

* Use dbsetversion() vs. dbsetlversion. Fixes #62.

* Remove Ruby 1.8 support.

* Implement misc rb_thread_blocking_region support. Fixes #121. Thanks @lepfhty.

* Test FreeTDS v0.91.89 patch release.

* Fix lost connection handling. Fixes #124. Thanks @krzcho.

* Remove unused variable. Fixes #103. Thanks @jeremyevans.

* Remove need to specify username for Windows Authentication.

* Use proper SQL for returning IDENTITY with Sybase. Fixes #95.

* Compile windows with `--enable-sspi`.

* Allow MiniPortile to build any FreeTDS version we need. Fixes #76.

* Always convert password option to string. Fixes #92.

* Move test system to real MiniTest::Spec. All tests pass on Azure too.

* Raise and handle encoding errors on DB writes. Fixes #89.


* 0.5.1 *

* Change how we configure with iconv, basically it is always needed. Fixes #11 & #69.


* 0.5.0 *

* Copy mysql2s handling of Time and Datetime so 64bit systems are leveraged. Fixes #46 and #47. Thanks @lsylvester!

* Add CFLAGS='-fPIC' for libtool. Fix TDS version configs in our ports file. Document. Fixes #45

* Update our TDS version constants to reflect changed 8.0/9.0 to 7.1/7.2 DBLIB versions in FreeTDS 
  while making it backward compatible, again like FreeTDS. Even tho you can not configure FreeTDS with
  TDS version 7.2 or technically even use it, I added tests to prove that we correctly handle both
  varchar(max) and nvarchar(max) with large amounts of data.
